# ros2-compressed-stream-metrics

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO_ISSUES.md  metrics.csv  mypy.ini  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature.yml
.github/workflows/: ci.yml
scripts/: bench.py  export_csv.py  ros2_demo.py  run-demo.sh  zmq_demo.py  zmq_pub.py  zmq_sub.py
src/stream_metrics/: __init__.py  cli.py  codec.py  generator.py  metrics.py  ros2_node_stub.py
src/stream_metrics/exporters/: csv_export.py  hist_export.py  prom_export.py
src/stream_metrics/transports/: bus_factory.py  impair.py  memory_bus.py  zmq_bus.py
tests/: test_codec.py  test_generator.py  test_metrics.py  test_metrics_hist.py  test_quantile.py
