[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stream_metrics"
version = "0.1.0"
description = "Simulated compressed camera/ToF streaming with latency and loss metrics. ROS2-ready architecture."
authors = [{ name = "Tristan Linardos", email = "linardostristan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.9",
  "rich>=13.7"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/Kestrellead/ros2-compressed-stream-metrics"
Issues = "https://github.com/Kestrellead/ros2-compressed-stream-metrics/issues"

[project.scripts]
stream-demo = "stream_metrics.cli:main"
ros2-stream-pub = "stream_metrics.ros2.nodes:run_pub"
ros2-stream-sub = "stream_metrics.ros2.nodes:run_sub"
